--- a/README.adoc
+++ b/README.adoc
@@ -1,15 +1,19 @@
 = Metanorma Windows Setup
 
-////
-image:https://img.shields.io/travis/riboseinc/metanorma-linux-setup/master.svg["Build Status", link="https://travis-ci.com/riboseinc/metanorma-linux-setup"]
-image:https://codeclimate.com/github/riboseinc/metanorma-linux-setup/badges/gpa.svg["Code Climate", link="https://codeclimate.com/github/riboseinc/metanorma-linux-setup"]
-////
+image:https://ci.appveyor.com/api/projects/status/github/riboseinc/metanorma-windows-setup?branch=master&svg=true["AppVeyor Build", link="https://ci.appveyor.com/project/ribose/metanorma-windows-setup"]
+image:https://codeclimate.com/github/riboseinc/metanorma-windows-setup/badges/gpa.svg["Code Climate", link="https://codeclimate.com/github/riboseinc/metanorma-windows-setup"]
+
 
 == Purpose
 
 This repository provides installation of the
 https://github.com/riboseinc/metanorma[Metanorma] publication toolchain
 on Windows.
+
+There are two types of installation:
+
+* Docker: allows easier management of dependencies
+* Native: better performance
 
 
 == Requirements
@@ -18,20 +22,27 @@ on Windows.
 
 Older versions may work but are not tested.
 
+
 == Install
+
+
+=== Native installation
 
 Run this command in your `cmd.exe` or `PowerShell`:
 
 [source,sh]
 ----
-bitsadmin /transfer get https://raw.githubusercontent.com/CAMOBAP795/metanorma-windows-setup/master/install.bat %cd%\install.bat & .\install.bat
+bitsadmin /transfer get https://raw.githubusercontent.com/riboseinc/metanorma-windows-setup/master/install.bat %cd%\install.bat & .\install.bat
 ----
 
-== Manual Installation prerequisites
 
-If automatic installation doesn't work for you for some reasons follow steps bellow
 
-=== General
+=== Docker installation
+
+If automatic installation doesn't work for you for some reason, follow steps bellow.
+
+
+==== General
 
 Running Metanorma requires installation of the following software:
 
@@ -47,7 +58,7 @@ There are two ways to install prerequisite packages on Windows:
 * Via manual downloads and installs
 
 
-=== (Recommended) Install "`Chocolatey`"
+==== (Recommended) Install "`Chocolatey`"
 
 You can install Chocolatey with `cmd.exe` or PowerShell.
 
@@ -56,7 +67,7 @@ Let's take the PowerShell method as an example.
 NOTE: Refer to detailed steps here: https://chocolatey.org/install
 
 
-==== Open PowerShell with Administrator rights
+===== Open PowerShell with Administrator rights
 
 Right-click on the "`Start`" menu, and click on "`Windows PowerShell (Admin)`".
 
@@ -68,7 +79,7 @@ image::images/windows-powershell-enable.png[]
 
 
 
-==== Run Chocolatey install script in PowerShell
+===== Run Chocolatey install script in PowerShell
 
 Inside the PowerShell with Administrator rights, paste the following
 commands into it.
@@ -80,11 +91,11 @@ Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.We
 
 
 
-=== Install "`Git`"
+==== Install "`Git`"
 
 We strongly recommend installing "`Git`" using Chocolatey.
 
-==== Install Git using Chocolatey
+===== Install Git using Chocolatey
 
 All you need is to run the following command:
 
@@ -95,7 +106,7 @@ choco install git -y
 
 
 
-==== Install Git manually
+===== Install Git manually
 
 
 Go to this website to download "`Git for Windows`":
@@ -106,12 +117,12 @@ And install it.
 
 
 
-=== Install "`Docker for Windows`"
+==== Install "`Docker for Windows`"
 
 Again, life is much easier using Chocolatey.
 
 
-==== Install Docker for Windows using Chocolatey
+===== Install Docker for Windows using Chocolatey
 
 The following command installs "`Docker for Windows`"
 
@@ -122,7 +133,7 @@ choco install docker-for-windows -y
 
 
 
-==== Install Docker for Windows manually
+===== Install Docker for Windows manually
 
 . Go to the https://store.docker.com/editions/community/docker-ce-desktop-windows[Docker Store] to download "`Docker for Windows`"
 
@@ -153,7 +164,7 @@ image::images/docker-manual-install-config.png[]
 image::images/docker-manual-install-finished.png[]
 
 
-==== Post-install
+===== Post-install
 
 This section is relevant regardless of which method you used to install
 Docker for Windows.
@@ -172,7 +183,7 @@ image::images/docker-up.png[]
 
 
 
-==== Switching Docker to use Linux containers
+===== Switching Docker to use Linux containers
 
 If you mistakenly enabled "`Windows containers`", you will have to
 switch back to "`Linux containers`" to run the Metanorma container.
@@ -192,7 +203,10 @@ image::images/docker-switch-to-linux.png[]
 
 == Verify everything works
 
-=== General
+
+=== Special notes for Docker installation
+
+==== Drive sharing with Docker
 
 When running the following commands, you may be prompted to share
 your current drive, such as "`C:\`", as shown below. This is necessary
@@ -203,15 +217,48 @@ Click "`Share It`" to share the drive with the Metanorma Docker container.
 
 image::images/docker-share-drive.png[]
 
+==== Running Docker on Windows within a VM
+
+If you are running Windows via virtualization, you must set your hypervisor
+to enable hardware virtualization for the Windows VM.
+
+For example, this screenshot shows you how to enable VT-x in a VM
+on VMWare Fusion:
+
+image::images/vmware-enable-vtx.png[]
+
+
+
 
 === Example: ISO Rice document
+
+
+==== Clone source
 
 [source,sh]
 ----
 git clone https://github.com/riboseinc/isodoc-rice
 cd isodoc-rice
+----
+
+
+==== Run on native installation
+
+[source,sh]
+----
+make -f Makefile.win clean all
+----
+
+
+==== Run on Docker installation
+
+[source,sh]
+----
 docker run -v ${pwd}:/metanorma/ ribose/metanorma "metanorma -t iso -x html,xml,doc iso-rice-en.adoc"
 ----
+
+
+==== Verify generated files
 
 Then you can open the generated HTML file in PowerShell using Internet Explorer Edge:
 
@@ -223,12 +270,34 @@ Invoke-Item iso-rice-en.html
 
 === Example: UNECE Recommendation 42
 
+
+==== Clone source
+
 [source,sh]
 ----
 git clone https://github.com/riboseinc/unece-cefact-recommendation-42
 cd unece-cefact-recommendation-42
+----
+
+
+==== Run on native installation
+
+[source,sh]
+----
+make -f Makefile.win clean all
+----
+
+
+==== Run on Docker installation
+
+
+[source,sh]
+----
 docker run -v ${pwd}:/metanorma/ ribose/metanorma "metanorma -t cefact -x html,xml,doc unece-cefact-recommendation-42.adoc"
 ----
+
+
+==== Verify generated files
 
 Then you can open the generated HTML file in PowerShell using Internet Explorer Edge:
 
@@ -236,18 +305,6 @@ Then you can open the generated HTML file in PowerShell using Internet Explorer 
 ----
 Invoke-Item unece-cefact-recommendation-42.html
 ----
-
-
-
-== Notes for running Windows in a VM (and Docker on it!)
-
-If you are running Windows via virtualization, you must set your hypervisor
-to enable hardware virtualization for the Windows VM.
-
-For example, this screenshot shows you how to enable VT-x in a VM
-on VMWare Fusion:
-
-image::images/vmware-enable-vtx.png[]
 
 
 
