--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,7 @@
 
 image:https://ci.appveyor.com/api/projects/status/github/riboseinc/metanorma-windows-setup?branch=master&svg=true["AppVeyor Build", link="https://ci.appveyor.com/project/ribose/metanorma-windows-setup"]
 image:https://codeclimate.com/github/riboseinc/metanorma-windows-setup/badges/gpa.svg["Code Climate", link="https://codeclimate.com/github/riboseinc/metanorma-windows-setup"]
+image:https://ci.appveyor.com/api/projects/status/vqo2221uwcaov8kx?svg=true["Build Status", link="https://ci.appveyor.com/project/ribose/metanorma-windows-setup"]
 
 
 == Purpose
